--- a/src/components/core/Scripts.astro
+++ b/src/components/core/Scripts.astro
@@ -2,6 +2,9 @@
 ---
 
 <script is:inline>
+	// O tema precisa ser lido e setado na primeira vez
+	// num script inline para não ter FOUC.
+
 	let startTheme = 'light';
 
 	const savedTheme = window.localStorage.getItem('theme');
@@ -16,21 +19,7 @@
 
 	window.localStorage.setItem('theme', startTheme);
 
-	// Set "light" theme as default
-	// if (!localStorage.theme) {
-	// 	localStorage.theme = 'light';
-	// }
-
-	// On page load or when changing themes, best to add inline in `head` to avoid FOUC
-	// if (
-	// 	localStorage.theme === 'dark' ||
-	// 	(!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)
-	// ) {
-	// 	document.documentElement.classList.add('dark');
-	// } else {
-	// 	document.documentElement.classList.remove('dark');
-	// }
-
+	// TODO: Refatorar daqui pra baixo por React
 	function attachEvent(selector, event, fn) {
 		const matches = document.querySelectorAll(selector);
 		if (matches && matches.length) {
@@ -46,12 +35,6 @@
 			document.body.classList.toggle('overflow-hidden');
 			document.getElementById('menu')?.classList.toggle('hidden');
 		});
-
-		// attachEvent('[data-sw-btn-toggle-theme]', 'click', function (elem) {
-		// 	elem.classList.toggle('toggled');
-		// 	document.documentElement.classList.toggle('dark');
-		// 	localStorage.theme = document.documentElement.classList.contains('dark') ? 'dark' : 'light';
-		// });
 	};
 
 	window.onpageshow = function () {
