--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -1,13 +1,12 @@
 ---
-import ThemeToggle from '@core/ThemeToggle.astro';
 import ButtonToggleMenu from '@core/ButtonToggleMenu.astro';
+import ButtonToggleTheme from '@core/ButtonToggleTheme';
 ---
 
 <header
 	class="sticky top-0 z-40 w-full flex-none mx-auto md:backdrop-blur-sm shadow-md bg-sw-secondary dark:bg-sw-primary"
 >
 	<div class="py-4 px-4 lg:px-0 mx-auto w-full md:flex md:justify-between max-w-6xl">
-
 		<nav class="flex justify-between">
 			<a class="flex items-center">
 				<span
@@ -16,7 +15,7 @@ import ButtonToggleMenu from '@core/ButtonToggleMenu.astro';
 				>
 			</a>
 			<div class="flex items-center md:hidden">
-				<ThemeToggle />
+				<ButtonToggleTheme client:load />
 				<ButtonToggleMenu />
 			</div>
 		</nav>
@@ -44,7 +43,7 @@ import ButtonToggleMenu from '@core/ButtonToggleMenu.astro';
 			</ul>
 			<div class="md:self-center flex items-center mb-4 md:mb-0">
 				<div class="hidden items-center md:flex">
-					<ThemeToggle />
+					<ButtonToggleTheme client:load />
 				</div>
 			</div>
 		</nav>
