seo unfriendly 2.0 eletric boogaloo

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -10,6 +10,8 @@ import Scripts from '@core/Scripts.astro';
 <!DOCTYPE html>
 <html lang="ptbr" class="motion-safe:scroll-smooth 2xl:text-5">
 	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
 
 	<body class="antialiased py-1 md:py-0 spacewiz__bg--reversed spacewiz__text align-middle">
