--- a/src/components/widgets/Products.astro
+++ b/src/components/widgets/Products.astro
@@ -18,23 +18,28 @@ const { ...props } = Astro.props as Props;
 
 	<section class="my-8 grid grid-cols-1 md:grid-cols-2 gap-16 md:gap-24 content-around">
 		<ProductCard
-			iconSrc="./models/products/tools.fbx"
+			iconSrc="./models/products/product_model-games_placeholder.gltf"
 			title="Games"
 			subtitle="jogos 2D e 3D"
 			description="desenvolvimento de <span class='spacewiz__text--accent'>jogos 2D ou 3D</span> em Unity Engine"
 		/>
 		<ProductCard
-			iconSrc="./models/products/tools.fbx"
+			iconSrc="./models/products/product_model-web_placeholder.gltf"
 			title="Web"
 			subtitle="sites interativos"
 			description="desenvolvimento de <span class='spacewiz__text--accent'>experiências gamificadas</span> para Web"
 		/>
 		<ProductCard
-			iconSrc="./models/products/tools.fbx"
+			iconSrc="./models/products/product_model-apps_placeholder.gltf"
 			title="Apps"
 			subtitle="aplicativos"
 			description="desenvolvimento de <span class='spacewiz__text--accent'>aplicativos nativos</span> para mobile e desktop."
 		/>
-		<ProductCard iconSrc="./models/products/tools.fbx" title="Áudio e Música" subtitle="" description="" />
+		<ProductCard
+			iconSrc="./models/products/product_model-music_placeholder.gltf"
+			title="Áudio e Música"
+			subtitle="áudio - subtítulo"
+			description="<span class='spacewiz__text--accent'>áudio</span> - descrição"
+		/>
 	</section>
 </div>
