--- a/src/components/widgets/Products.astro
+++ b/src/components/widgets/Products.astro
@@ -19,24 +19,28 @@ const { ...props } = Astro.props as Props;
 	<section class="my-8 grid grid-cols-1 md:grid-cols-2 gap-16 md:gap-24 content-around">
 		<ProductCard
 			iconSrc="./models/products/product_model-games_placeholder.gltf"
+			iconColor={0xb02831}
 			title="Games"
 			subtitle="jogos 2D e 3D"
 			description="desenvolvimento de <span class='spacewiz__text--accent'>jogos 2D ou 3D</span> em Unity Engine"
 		/>
 		<ProductCard
 			iconSrc="./models/products/product_model-web_placeholder.gltf"
+			iconColor={0x5169f4}
 			title="Web"
 			subtitle="sites interativos"
 			description="desenvolvimento de <span class='spacewiz__text--accent'>experiências gamificadas</span> para Web"
 		/>
 		<ProductCard
 			iconSrc="./models/products/product_model-apps_placeholder.gltf"
+			iconColor={0x34c708}
 			title="Apps"
 			subtitle="aplicativos"
 			description="desenvolvimento de <span class='spacewiz__text--accent'>aplicativos nativos</span> para mobile e desktop."
 		/>
 		<ProductCard
 			iconSrc="./models/products/product_model-music_placeholder.gltf"
+			iconColor={0xe5ea36}
 			title="Áudio e Música"
 			subtitle="áudio - subtítulo"
 			description="<span class='spacewiz__text--accent'>áudio</span> - descrição"
