--- a/src/components/atoms/TeamCard.astro
+++ b/src/components/atoms/TeamCard.astro
@@ -2,40 +2,57 @@
 import { Icon } from 'astro-icon';
 
 export interface Props {
-	[props: string]: any;
+	photoSrc: string;
+	name: string;
+	roles: string[];
+	skills: string[];
+	links: {
+		artstation?: string;
+		github?: string;
+		instagram?: string;
+		linkedin?: string;
+		linktree?: string;
+		soundcloud?: string;
+	};
 }
 
-const { ...props } = Astro.props as Props;
+const { photoSrc, name, roles, skills, links } = Astro.props as Props;
 ---
 
 <div
-	class="card card-compact shadow-lg relative overflow-visible bg-gradient-to-b from-sw-secondary-300 to-sw-secondary-600 dark:from-sw-primary-600 dark:to-sw-primary-800  text-sw-secondary-500"
+	class="card card-compact shadow-lg relative overflow-visible bg-gradient-to-b from-sw-secondary-300 to-sw-secondary-600 dark:from-sw-primary-600 dark:to-sw-primary-800 text-sw-secondary-500"
 >
 	<div class="card-body place-items-center items-center relative">
 		<div class="avatar -mt-8 absolute">
 			<div class="w-24 rounded-full ring ring-sw-navy dark:ring-sw-flamingo ring-offset-base-100 ring-offset-2">
-				<img src="https://placeimg.com/192/192/people" />
+				<img src={photoSrc} />
 			</div>
 		</div>
 
 		<div class="mt-20 w-full text-center">
-			<h2 class="text-lg font-extrabold spacewiz__text">Team Member</h2>
+			<h2 class="text-lg font-extrabold spacewiz__text">{name}</h2>
 			<div class="my-2 text-sw-primary/60 dark:text-sw-secondary/60">
-				<p>Role 1</p>
-				<p>Role 2</p>
-				<p>Role 3</p>
+				{roles.map((r) => <p>{r}</p>)}
 			</div>
 		</div>
 
-		<div class="mt-2 text-center ">
-			<span class="badge m-1 p-1 text-sw-primary dark:text-sw-secondary bg-sw-secondary-700 dark:bg-sw-primary-900 border-none">Concept Art</span>
-			<span class="badge m-1 p-1 text-sw-primary dark:text-sw-secondary bg-sw-secondary-700 dark:bg-sw-primary-900 border-none">Ilustração</span>
-			<span class="badge m-1 p-1 text-sw-primary dark:text-sw-secondary bg-sw-secondary-700 dark:bg-sw-primary-900 border-none">Design Gráfico</span>
+		<div class="mt-2 text-center">
+			{
+				skills.map((s) => (
+					<span class="badge m-1 p-1 text-sw-primary dark:text-sw-secondary bg-sw-secondary-700 dark:bg-sw-primary-900 border-none">
+						{s}
+					</span>
+				))
+			}
 		</div>
 
 		<div class="card-actions justify-end">
 			<div class="dropdown dropdown-top dropdown-end">
-				<label tabindex="0" for="social-links" class="btn btn-circle m-1 spacewiz__bg--accent text-sw-primary border-none">
+				<label
+					tabindex="0"
+					for="social-links"
+					class="btn btn-circle m-1 spacewiz__bg--accent text-sw-primary border-none"
+				>
 					<Icon name="akar-icons:plus" class="w-6 h-6" />
 				</label>
 
@@ -44,18 +61,18 @@ const { ...props } = Astro.props as Props;
 				<div class="modal z-50">
 					<div class="modal-box z-50">
 						<ul>
-							<li>Instagram</li>
-							<li>Linkedin</li>
-							<li>GitHub</li>
-							<li>Artstation</li>
-							<li>SoundCloud</li>
+							{links.artstation ? <li>Artstation</li> : null}
+							{links.github ? <li>GitHub</li> : null}
+							{links.instagram ? <li>Instagram</li> : null}
+							{links.linkedin ? <li>LinkedIn</li> : null}
+							{links.linktree ? <li>LinkTree</li> : null}
+							{links.soundcloud ? <li>SoundCloud</li> : null}
 						</ul>
 						<div class="modal-action">
 							<label for="social-links" class="btn">Yay!</label>
 						</div>
 					</div>
 				</div>
-
 			</div>
 		</div>
 	</div>
