--- a/src/components/atoms/TeamCard.astro
+++ b/src/components/atoms/TeamCard.astro
@@ -47,32 +47,54 @@ const { photoSrc, name, roles, skills, links } = Astro.props as Props;
 		</div>
 
 		<div class="card-actions justify-end">
-			<div class="dropdown dropdown-top dropdown-end">
-				<label
-					tabindex="0"
-					for="social-links"
-					class="btn btn-circle m-1 spacewiz__bg--accent text-sw-primary border-none"
-				>
+			<div class="dropdown dropdown-top">
+				<label tabindex="0" class="btn btn-circle m-1 spacewiz__bg--accent text-sw-primary border-none">
 					<Icon name="akar-icons:plus" class="w-6 h-6" />
 				</label>
-
-				<input type="checkbox" id="social-links" class="modal-toggle" />
-
-				<div class="modal z-50">
-					<div class="modal-box z-50">
-						<ul>
-							{links.artstation ? <li>Artstation</li> : null}
-							{links.github ? <li>GitHub</li> : null}
-							{links.instagram ? <li>Instagram</li> : null}
-							{links.linkedin ? <li>LinkedIn</li> : null}
-							{links.linktree ? <li>LinkTree</li> : null}
-							{links.soundcloud ? <li>SoundCloud</li> : null}
-						</ul>
-						<div class="modal-action">
-							<label for="social-links" class="btn">Yay!</label>
-						</div>
-					</div>
-				</div>
+				<ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52">
+					{
+						links.artstation ? (
+							<li>
+								<a>Artstation</a>
+							</li>
+						) : null
+					}
+					{
+						links.github ? (
+							<li>
+								<a>GitHub</a>
+							</li>
+						) : null
+					}
+					{
+						links.instagram ? (
+							<li>
+								<a>Instagram</a>
+							</li>
+						) : null
+					}
+					{
+						links.linkedin ? (
+							<li>
+								<a>LinkedIn</a>
+							</li>
+						) : null
+					}
+					{
+						links.linktree ? (
+							<li>
+								<a>LinkTree</a>
+							</li>
+						) : null
+					}
+					{
+						links.soundcloud ? (
+							<li>
+								<a>SoundCloud</a>
+							</li>
+						) : null
+					}
+				</ul>
 			</div>
 		</div>
 	</div>
