--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -19,27 +19,28 @@ const lorem = new LoremIpsum(
 
 <DividerArrowDown class="spacewiz__fill--reversed bg-sw-coal-700" />
 
-<footer class="footer p-10 bg-sw-coal-700 text-sw-coal-400">
-	<div>
+<footer class="footer grid grid-cols-2 md:grid-cols-3 p-10 bg-sw-coal-700 text-sw-coal-400 justify-items-center">
+	<div class="justify-items-center">
 		<span class="footer-title text-sw-coal-100">Serviços</span>
 		<a class="link link-hover">Web</a>
 		<a class="link link-hover">Games</a>
 		<a class="link link-hover">Apps</a>
 		<a class="link link-hover">Audiovisual</a>
 	</div>
-	<div>
+	<div class="justify-items-center">
 		<span class="footer-title text-sw-coal-100">Sobre nós</span>
 		<a class="link link-hover">About us</a>
 		<a class="link link-hover">Contato</a>
 		<a class="link link-hover">Press kit</a>
 	</div>
-	<div>
+	<div class="justify-items-center">
 		<span class="footer-title text-sw-coal-100">Lenga lenga jurídico</span>
 		<a class="link link-hover">Terms of use</a>
 		<a class="link link-hover">Privacy policy</a>
 		<a class="link link-hover">Cookie policy</a>
 	</div>
 </footer>
+
 <footer class="footer px-10 py-4 border-t bg-sw-coal-800 text-sw-coal-300 border-sw-coal-200">
 	<div class="items-center grid-flow-col">
 		<svg
