shadow-md em tudo

--- a/src/components/atoms/TeamCard.astro
+++ b/src/components/atoms/TeamCard.astro
@@ -51,7 +51,7 @@ const { photoSrc, name, roles, skills, links } = Astro.props as Props;
 				<label tabindex="0" class="btn btn-circle m-1 spacewiz__bg--accent text-sw-primary border-none">
 					<Icon name="akar-icons:plus" class="w-6 h-6" />
 				</label>
-				<ul tabindex="0" class="dropdown-content menu p-2 shadow bg-base-100 rounded-box w-52">
+				<ul tabindex="0" class="dropdown-content menu p-2 shadow-md bg-base-100 rounded-box w-52">
 					{
 						links.artstation ? (
 							<li>
