--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -42,7 +42,7 @@ const { ...props } = Astro.props as Props;
 						style="background-image: url('https://source.unsplash.com/kvHhSroTNPY/600x800')"
 					>
 					</div>
-					<div class="w-full bg-white p-5 rounded-lg lg:rounded-l-none shadow-xl">
+					<div class="w-full bg-white p-5 rounded-lg lg:rounded-l-none shadow-md">
 						<form class="px-8 pt-6 pb-8 mb-4 bg-white rounded">
 							<div class="mb-4 md:flex md:justify-between">
 								<div class="mb-4 md:mr-2 md:mb-0">
@@ -50,7 +50,7 @@ const { ...props } = Astro.props as Props;
 										Nome
 									</label>
 									<input
-										class="w-full px-3 py-2 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
+										class="w-full px-3 py-2 text-sm leading-tight text-gray-700 border rounded shadow-md appearance-none focus:outline-none focus:shadow-outline"
 										id="firstName"
 										type="text"
 										placeholder="seu nome"
@@ -61,7 +61,7 @@ const { ...props } = Astro.props as Props;
 										Sobrenome
 									</label>
 									<input
-										class="w-full px-3 py-2 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
+										class="w-full px-3 py-2 text-sm leading-tight text-gray-700 border rounded shadow-md appearance-none focus:outline-none focus:shadow-outline"
 										id="lastName"
 										type="text"
 										placeholder="seu sobrenome"
@@ -71,7 +71,7 @@ const { ...props } = Astro.props as Props;
 							<div class="mb-4">
 								<label class="block mb-2 text-sm font-bold text-gray-700" for="email"> Email</label>
 								<input
-									class="w-full px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
+									class="w-full px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border rounded shadow-md appearance-none focus:outline-none focus:shadow-outline"
 									id="email"
 									type="email"
 									placeholder="seu email"
@@ -80,7 +80,7 @@ const { ...props } = Astro.props as Props;
 							<div class="mb-4">
 								<label class="block mb-2 text-sm font-bold text-gray-700" for="text">Descrição</label>
 								<textarea
-									class="w-full h-32 px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
+									class="w-full h-32 px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border rounded shadow-md appearance-none focus:outline-none focus:shadow-outline"
 									id="text"
 									placeholder="nos deixe sua mensagem :)"
 								/>
