"scss/alpha-value-notation": "number"

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,6 +1,6 @@
-@import "spacewiz.scss";
-@import "text.scss";
-@import "toggle.scss";
+@import "spacewiz";
+@import "text";
+@import "toggle";
 
 @tailwind base;
 @tailwind components;
