--- a/src/components/widgets/About.astro
+++ b/src/components/widgets/About.astro
@@ -26,8 +26,9 @@ const { ...props } = Astro.props as Props;
 <div {...props}>
 	<header>
 		<h1 class="font-black uppercase text-4xl mb-8">
-			<span>Sobre</span>
+			<span>Quem somos </span>
 			<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-flamingo">nós</span>
+			<span>?</span>
 		</h1>
 	</header>
 
