--- a/src/components/widgets/Products.astro
+++ b/src/components/widgets/Products.astro
@@ -11,8 +11,9 @@ const { ...props } = Astro.props as Props;
 <div {...props}>
 	<header>
 		<h1 class="font-black uppercase text-4xl mb-12">
-			<span>O que</span>
-			<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-flamingo">fazemos</span>
+			<span>Os </span>
+			<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-flamingo">serviços</span>
+			<span> que fazemos</span>
 		</h1>
 	</header>
 
@@ -20,29 +21,29 @@ const { ...props } = Astro.props as Props;
 		<ProductCard
 			iconSrc="./models/products/product_model-games_placeholder.gltf"
 			iconColor={0x005CE6}
-			title="Games"
-			subtitle="subtítulo"
-			description="<p class='text-sw-primary dark:text-sw-secondary'> texto <span class='text-sw-navy dark:text-sw-flamingo'> destaque </span> texto </p>"
+			title="GameDev "
+			subtitle="e outsourcing"
+			description="<p class='text-sw-primary dark:text-sw-secondary'>Desenvolvimento de <span class='text-sw-navy dark:text-sw-flamingo'> jogos 2D ou 3D.</span><br><br>Estamos prontos para trazer sua ideia de jogo à vida! Nossa tripulação conta com profissionais com backgrounds nas mais diversas áreas de desenvolvimento. :)</p>"
 		/>
 		<ProductCard
 			iconSrc="./models/products/product_model-web_placeholder.gltf"
 			iconColor={0xfF62F2}
-			title="Web"
-			subtitle="subtítulo"
-			description="<p class='text-sw-primary dark:text-sw-secondary'> texto <span class='text-sw-navy dark:text-sw-flamingo'> destaque </span> texto </p>"
+			title="WebDev "
+			subtitle="e gamificação"
+			description="<p class='text-sw-primary dark:text-sw-secondary'>Desenvolvimento de <span class='text-sw-navy dark:text-sw-flamingo'> experiências únicas </span>, trazendo os conceitos de gamificação e até mesmo incluir peças 3D ou 2D.</p>"
 		/>
 		<ProductCard
 			iconSrc="./models/products/product_model-apps_placeholder.gltf"
 			iconColor={0x005CE6}
-			title="Apps"
-			subtitle="subtítulo"
+			title="Apps "
+			subtitle="e soluções interativas"
 			description="<p class='text-sw-primary dark:text-sw-secondary'> texto <span class='text-sw-navy dark:text-sw-flamingo'> destaque </span> texto </p>"
 		/>
 		<ProductCard
 			iconSrc="./models/products/product_model-music_placeholder.gltf"
 			iconColor={0xfF62F2}
-			title="Áudio e Música"
-			subtitle="subtítulo"
+			title="Áudio e Música "
+			subtitle=""
 			description="<p class='text-sw-primary dark:text-sw-secondary'> texto <span class='text-sw-navy dark:text-sw-flamingo'> destaque </span> texto </p>"
 		/>
 	</section>
