--- a/src/components/atoms/TeamCard.astro
+++ b/src/components/atoms/TeamCard.astro
@@ -48,7 +48,7 @@ const { photoSrc, name, roles, skills, links } = Astro.props as Props;
 
 		<div class="card-actions justify-end">
 			<div class="dropdown dropdown-top">
-				<label tabindex="0" class="btn btn-circle m-1 spacewiz__bg--accent text-sw-primary border-none">
+				<label tabindex="0" class="btn btn-circle m-1 bg-sw-navy dark:bg-sw-flamingo hover:bg-sw-navy-600 hover:dark:bg-sw-flamingo-600  text-sw-primary border-none">
 					<Icon name="akar-icons:plus" class="w-6 h-6" />
 				</label>
 				<ul tabindex="0" class="dropdown-content menu p-2 shadow-md bg-base-100 rounded-box w-52">
