--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -6,7 +6,7 @@ import Hero from '@widgets/Hero.astro';
 
 <Layout>
 	<Hero />
-	<main>
+	<main class="overflow-x-hidden">
 		<slot />
 	</main>
 </Layout>
