--- a/src/components/widgets/Contact.astro
+++ b/src/components/widgets/Contact.astro
@@ -23,11 +23,11 @@ const { ...props } = Astro.props as Props;
 
 <div {...props}>
 	<header>
-		<h1 class="font-black uppercase text-4xl">
+		<h1 class="font-black uppercase">
 			<span>Entre em contato</span>
 		</h1>
-		<p class="text-2xl mb-8">
-			<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-flamingo">Nos conte uma história</span
+		<p class="text-2xl mb-12">
+			<span class="text-gradient bg-gradient-to-t from-sw-navy-700 to-sw-flamingo">Nos conte uma história</span
 			>
 		</p>
 	</header>
