--- a/src/components/widgets/Header.astro
+++ b/src/components/widgets/Header.astro
@@ -25,9 +25,7 @@ import ButtonToggleTheme from '@core/ButtonToggleTheme';
 			aria-label="Main navigation"
 			id="menu"
 		>
-			<ul
-				class="flex flex-col pt-8 md:pt-0 md:flex-row md:self-center collapse w-full md:w-auto collapsed text-xl md:text-base"
-			>
+			<!-- TODO <ul class="flex flex-col pt-8 md:pt-0 md:flex-row md:self-center collapse w-full md:w-auto collapsed text-xl md:text-base">
 				<li>
 					<a
 						class="font-medium hover:text-sw-primary-900 dark:hover:text-sw-secondary-600 px-4 py-3 flex items-center transition duration-150 ease-in-out"
@@ -40,7 +38,7 @@ import ButtonToggleTheme from '@core/ButtonToggleTheme';
 						href="#">Projetos</a
 					>
 				</li>
-			</ul>
+			</ul> -->
 			<div class="md:self-center flex items-center mb-4 md:mb-0">
 				<div class="hidden items-center md:flex">
 					<ButtonToggleTheme client:load />
