--- a/src/components/widgets/Team.astro
+++ b/src/components/widgets/Team.astro
@@ -10,11 +10,11 @@ const { ...props } = Astro.props as Props;
 
 <div {...props}>
 	<header>
-		<h1 class="font-black uppercase text-4xl">
+		<h1 class="font-black uppercase">
 			<span>A tripulação</span>
 		</h1>
-		<p class="text-2xl mb-8">
-			<span class="text-gradient bg-gradient-to-t from-sw-primary-300 to-sw-flamingo">Nosso incrível time</span>
+		<p class="text-2xl mb-12">
+			<span class="text-gradient bg-gradient-to-t from-sw-navy-700 to-sw-flamingo">Nosso incrível time</span>
 		</p>
 	</header>
 
@@ -22,8 +22,8 @@ const { ...props } = Astro.props as Props;
 		<TeamCard
 			photoSrc="https://placeimg.com/192/192/people"
 			name="Alexandre Barbosa"
-			roles={['Sound Designer']}
-			skills={['Concept Art', 'Ilustração', 'Design Gráfico']}
+			roles={['Generalista de Áudio']}
+			skills={['Composição', 'Produção Musical', 'Efeitos Sonoros', ]}
 			links={{
 				instagram: 'link',
 				soundcloud: 'link',
@@ -31,30 +31,31 @@ const { ...props } = Astro.props as Props;
 			}}
 		/>
 		<TeamCard
-			photoSrc="https://placeimg.com/192/192/people"
+			photoSrc="./src/assets/images/team/danilo_profile.png"
 			name="Danilo Nobre"
 			roles={['Generalista 3D']}
-			skills={['Concept Art', 'Ilustração', 'Design Gráfico']}
+			skills={['Modelagem 3D', 'Texturização', 'Rigging', 'Animação']}
 			links={{
 				instagram: 'link',
 				linktree: 'link',
 			}}
 		/>
 		<TeamCard
-			photoSrc="https://placeimg.com/192/192/people"
+			photoSrc="./src/assets/images/team/gustavo_profile.png"
 			name="Gustavo Arantes"
 			roles={['Generalista 2D']}
-			skills={['Concept Art', 'Ilustração', 'Design Gráfico']}
+			skills={['Concept Art', 'Ilustração']}
 			links={{
 				artstation: 'link',
 				instagram: 'link',
 			}}
 		/>
 		<TeamCard
-			photoSrc="https://placeimg.com/192/192/people"
+			photoSrc="./src/assets/images/team/rhayane_profile.png"
+
 			name="Rhayane Miranda"
-			roles={['Social Media Jr.']}
-			skills={['Concept Art', 'Ilustração', 'Design Gráfico']}
+			roles={['Social Media']}
+			skills={['Criação', 'Analytics']}
 			links={{
 				instagram: 'link',
 			}}
@@ -63,7 +64,7 @@ const { ...props } = Astro.props as Props;
 			photoSrc="https://placeimg.com/192/192/people"
 			name="William Magalhães"
 			roles={['Programador Full Stack']}
-			skills={['Concept Art', 'Ilustração', 'Design Gráfico']}
+			skills={['Backend', 'Frontend', 'Tech Artist']}
 			links={{
 				instagram: 'link',
 				github: 'link',
