--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,22 +11,22 @@ import DividerRect from '@atoms/DividerRect.astro';
 ---
 
 <Layout>
-	<section class="max-w-6xl mx-auto px-6 md:px-8 min-h-screen">
+	<section class="max-w-6xl mx-auto px-6 md:px-8">
 		<Products class="relative z-20" />
 	</section>
 
 	<div class="shadow-md bg-sw-secondary-700 dark:bg-sw-primary-700 z-20" >
 		<DividerRect class="w-full -mt-16 h-16 absolute z-10 bg-sw-secondary-700 dark:bg-sw-primary-700" />
-		<section class="max-w-6xl mx-auto py-8 px-6 md:px-8 min-h-screen">
+		<section class="max-w-6xl mx-auto py-8 px-6 md:px-8">
 			<About />
 		</section>
 	</div>
 
-	<section class="max-w-6xl mx-auto my-16 px-6 md:px-8 min-h-screen">
+	<section class="max-w-6xl mx-auto my-16 px-6 md:px-8">
 		<Team />
 	</section>
 
-	<section class="max-w-6xl mx-auto my-16 px-6 md:px-8 min-h-screen">
+	<!-- TODO <section class="max-w-6xl mx-auto my-16 px-6 md:px-8 min">
 		<Contact />
-	</section>
+	</section> -->
 </Layout>
