--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -4,7 +4,7 @@ import { GoogleAnalytics } from "@astrolib/analytics"
 
 import { getImage } from '@astrojs/image';
 
-import { SITE } from './src/config.mjs'
+import { SITE } from '~/config.mjs';
 import Fonts from '@atoms/Fonts.astro';
 
 // TODO PEGAR O HERO DAS PÁGINAS
