sem vitejs/plugin-legacy

--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -7,7 +7,7 @@ import { getImage } from '@astrojs/image';
 import { SITE } from '~/config.mjs';
 import Fonts from '@atoms/Fonts.astro';
 
-// TODO PEGAR O HERO DAS PÁGINAS
+// TODO: PEGAR O HERO DAS PÁGINAS
 const { src: defaultImage } = await getImage({
 	src: 'meta_main.png',
 	width: 1200,
