--- a/src/assets/styles/scrollbar.scss
+++ b/src/assets/styles/scrollbar.scss
@@ -2,34 +2,42 @@ html {
 	::-webkit-scrollbar {
 		width: 4px;
 		height: 4px;
-	  }
-	  ::-webkit-scrollbar-button {
-		width: 0px;
-		height: 0px;
-	  }
-	  ::-webkit-scrollbar-thumb {
+	}
+
+	::-webkit-scrollbar-button {
+		width: 0;
+		height: 0;
+	}
+
+	::-webkit-scrollbar-thumb {
 		background: #e1e1e1;
-		border: 0px none #ffffff;
+		border: 0 none #fff;
 		border-radius: 50px;
-	  }
-	  ::-webkit-scrollbar-thumb:hover {
-		background: #ffffff;
-	  }
-	  ::-webkit-scrollbar-thumb:active {
-		background: #000000;
-	  }
-	  ::-webkit-scrollbar-track {
-		background: #666666;
-		border: 0px none #ffffff;
+	}
+
+	::-webkit-scrollbar-thumb:hover {
+		background: #fff;
+	}
+
+	::-webkit-scrollbar-thumb:active {
+		background: #000;
+	}
+
+	::-webkit-scrollbar-track {
+		background: #666;
+		border: 0 none #fff;
 		border-radius: 50px;
-	  }
-	  ::-webkit-scrollbar-track:hover {
-		background: #666666;
-	  }
-	  ::-webkit-scrollbar-track:active {
-		background: #333333;
-	  }
-	  ::-webkit-scrollbar-corner {
+	}
+
+	::-webkit-scrollbar-track:hover {
+		background: #666;
+	}
+
+	::-webkit-scrollbar-track:active {
+		background: #333;
+	}
+
+	::-webkit-scrollbar-corner {
 		background: transparent;
-	  }
+	}
 }
