--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Contact from '@widgets/Contact.astro';
 import About from '@widgets/About.astro';
 import Team from '@widgets/Team.astro';
 
-import DividerRect from '@atoms/DividerRect.astro';
+import DividerRect from '@atoms/dividers/DividerRect.astro';
 
 ---
 
