--- a/src/components/widgets/Products.astro
+++ b/src/components/widgets/Products.astro
@@ -1,5 +1,5 @@
 ---
-import ProductCard from '@atoms/ProductCard.astro';
+import ProductCard from '@atoms/ProductCard';
 
 export interface Props {
 	[props: string]: any;
@@ -11,40 +11,57 @@ const { ...props } = Astro.props as Props;
 <div {...props}>
 	<header>
 		<h1 class="font-black uppercase mb-12">
-			<span>Os </span>
+			<span>Os</span>
 			<span class="text-gradient bg-gradient-to-t from-sw-navy-700 to-sw-flamingo">serviços</span>
 			<span> que fazemos</span>
 		</h1>
 	</header>
 
 	<section class="my-8 grid grid-cols-1 md:grid-cols-2 gap-16 md:gap-24 content-around">
-		<ProductCard
-			iconSrc="./models/products/product_model-games_placeholder.gltf"
-			iconColor={0x005CE6}
-			title="GameDev"
-			subtitle="e outsourcing"
-			description="<p class='text-sw-primary dark:text-sw-secondary'><span class='font-black text-sw-navy dark:text-sw-flamingo'>Jogos</span> incríveis sob demanda!<br><br>Nossa tripulação conta com profissionais de backgrounds nas mais diversas áreas de desenvolvimento.</p>"
-		/>
-		<ProductCard
-			iconSrc="./models/products/product_model-web_placeholder.gltf"
-			iconColor={0xfF62F2}
-			title="WebDev"
-			subtitle="e gamificação"
-			description="<p class='text-sw-primary dark:text-sw-secondary'><span class='font-black text-sw-navy dark:text-sw-flamingo'>Sites</span> e experiências únicas!<br><br>Podemos trabalhar conceitos de gamificação, incluir peças 3D ou 2D interativas ou até mesmo transformar sua aplicação web em um jogo!</p>"
-		/>
-		<ProductCard
-			iconSrc="./models/products/product_model-apps_placeholder.gltf"
-			iconColor={0x005CE6}
-			title="Apps"
-			subtitle="e soluções interativas"
-			description="<p class='text-sw-primary dark:text-sw-secondary'><span class='font-black text-sw-navy dark:text-sw-flamingo'>Aplicações</span> cativantes que atraem clientes!<br><br>Acreditamos que a melhor maneira de conectar pessoas à ideias é através de uma incrível experiência do usuário.</p>"
-		/>
-		<ProductCard
-			iconSrc="./models/products/product_model-music_placeholder.gltf"
-			iconColor={0xfF62F2}
-			title="Sonoplastia"
-			subtitle="áudio e música "
-			description="<p class='text-sw-primary dark:text-sw-secondary'><span class='font-black text-sw-navy dark:text-sw-flamingo'>Peças sonoras</span> envolventes!<br><br>Passamos por todas as fases da produção sonora e musical: desde a composição e produção à mixagem. Sua ideia pode ser complementada e elaborada para uma maior imersão!</p>"
-		/>
+		<ProductCard client:load iconSrc="./models/products/product_model-games_placeholder.gltf" iconColor={0x005ce6}>
+			<span slot="title">GameDev</span>
+			<span slot="subtitle">e outsourcing</span>
+			<span slot="description">
+				<span class="font-black text-sw-navy dark:text-sw-flamingo">Jogos</span> incríveis sob demanda!
+				<br />
+				<br />
+				Nossa tripulação conta com profissionais de backgrounds nas mais diversas áreas de desenvolvimento.
+			</span>
+		</ProductCard>
+
+		<ProductCard client:load iconSrc="./models/products/product_model-web_placeholder.gltf" iconColor={0xff62f2}>
+			<span slot="title">WebDev</span>
+			<span slot="subtitle">e gamificação</span>
+			<span slot="description">
+				<span class="font-black text-sw-navy dark:text-sw-flamingo">Sites</span> e experiências únicas!
+				<br />
+				<br />
+				Podemos trabalhar conceitos de gamificação, incluir peças 3D ou 2D interativas ou até mesmo transformar sua
+				aplicação web em um jogo!
+			</span>
+		</ProductCard>
+
+		<ProductCard client:load iconSrc="./models/products/product_model-apps_placeholder.gltf" iconColor={0x005ce6}>
+			<span slot="title">Apps</span>
+			<span slot="subtitle">e soluções interativas</span>
+			<span slot="description">
+				<span class="font-black text-sw-navy dark:text-sw-flamingo">Aplicações</span> cativantes que atraem clientes!
+				<br />
+				<br />
+				Acreditamos que a melhor maneira de conectar pessoas à ideias é através de uma incrível experiência do usuário.
+			</span>
+		</ProductCard>
+
+		<ProductCard client:load iconSrc="./models/products/product_model-music_placeholder.gltf" iconColor={0xff62f2}>
+			<span slot="title">Sonoplastia</span>
+			<span slot="subtitle">áudio e música</span>
+			<span slot="description">
+				<span class="font-black text-sw-navy dark:text-sw-flamingo">Peças sonoras</span> envolventes!
+				<br />
+				<br />
+				Passamos por todas as fases da produção sonora e musical: desde a composição e produção à mixagem. Sua ideia
+				pode ser complementada e elaborada para uma maior imersão!
+			</span>
+		</ProductCard>
 	</section>
 </div>
