--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -1,8 +1,8 @@
 ---
 import { Image } from '@astrojs/image/components';
 
-import heroImageSM from '@images/hero_bg_sm.png';
-import heroImageMD from '@images/hero_bg_md.png';
+import heroImageSM from '@images/hero_sm.png';
+import heroImageMD from '@images/hero_md.png';
 
 import DividerWave from '@atoms/dividers/DividerWave.astro';
 import HeroCanvas from '@atoms/HeroCanvas';
