--- a/src/components/widgets/Team.astro
+++ b/src/components/widgets/Team.astro
@@ -20,54 +20,53 @@ const { ...props } = Astro.props as Props;
 
 	<section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-16 text-justify my-16">
 		<TeamCard
-			photoSrc="https://placeimg.com/192/192/people"
+			photoSrc="/images/team/alex_profile.png"
 			name="Alexandre Barbosa"
 			roles={['Generalista de Áudio']}
 			skills={['Composição', 'Produção Musical', 'Efeitos Sonoros', ]}
 			links={{
-				instagram: 'link',
-				soundcloud: 'link',
-				linkedin: 'link',
+				youtube: 'https://www.youtube.com/channel/UCYSb-3wJyK-L0E9YyHeqkiQ',
+				imdb: 'https://www.imdb.com/name/nm11223910/?ref_=fn_al_nm_1',
+				linkedin: 'https://www.linkedin.com/in/alexandre-barbosa-083b83b4/',
 			}}
 		/>
 		<TeamCard
-			photoSrc="./src/assets/images/team/danilo_profile.png"
+			photoSrc="/images/team/danilo_profile.png"
 			name="Danilo Nobre"
 			roles={['Generalista 3D']}
 			skills={['Modelagem 3D', 'Texturização', 'Rigging', 'Animação']}
 			links={{
-				instagram: 'link',
-				linktree: 'link',
+				linkedin: 'https://www.linkedin.com/in/danilo-nobre/',
 			}}
 		/>
 		<TeamCard
-			photoSrc="./src/assets/images/team/gustavo_profile.png"
+			photoSrc="/images/team/gustavo_profile.png"
 			name="Gustavo Arantes"
 			roles={['Generalista 2D']}
 			skills={['Concept Art', 'Ilustração']}
 			links={{
-				artstation: 'link',
-				instagram: 'link',
+				portfolio: 'https://gustavarantes.myportfolio.com/',
+				linkedin: 'https://www.linkedin.com/in/gustav-arantes/',
 			}}
 		/>
 		<TeamCard
-			photoSrc="./src/assets/images/team/rhayane_profile.png"
+			photoSrc="/images/team/rhayane_profile.png"
 
 			name="Rhayane Miranda"
 			roles={['Social Media']}
 			skills={['Criação', 'Analytics']}
 			links={{
-				instagram: 'link',
+				linkedin: 'https://www.linkedin.com/in/rhayane-miranda/',
 			}}
 		/>
 		<TeamCard
-			photoSrc="https://placeimg.com/192/192/people"
+			photoSrc="/images/team/william_profile.png"
 			name="William Magalhães"
 			roles={['Programador Full Stack']}
 			skills={['Backend', 'Frontend', 'Tech Artist']}
 			links={{
-				instagram: 'link',
-				github: 'link',
+				instagram: 'https://www.instagram.com/wbmagalhaes/',
+				github: 'https://github.com/wbmagalhaes',
 			}}
 		/>
 	</section>
