favicon, wave-divider, focus, team url, about txt

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -1,3 +1,4 @@
+@import "focus";
 @import "scrollbar";
 @import "spacewiz";
 @import "text";
@@ -32,5 +33,3 @@
 		@apply text-base;
 	}
 }
-
-@layer components {}
