--- a/src/components/atoms/TeamCard.astro
+++ b/src/components/atoms/TeamCard.astro
@@ -58,63 +58,63 @@ const { photoSrc, name, roles, skills, links } = Astro.props as Props;
 					{
 						links.artstation ? (
 							<li>
-								<a href={links.artstation}>Artstation</a>
+								<a target="_blank"  href={links.artstation}>Artstation</a>
 							</li>
 						) : null
 					}
 					{
 						links.github ? (
 							<li>
-								<a href={links.github}>GitHub</a>
+								<a target="_blank"  href={links.github}>GitHub</a>
 							</li>
 						) : null
 					}
 					{
 						links.instagram ? (
 							<li>
-								<a href={links.instagram}>Instagram</a>
+								<a target="_blank"  href={links.instagram}>Instagram</a>
 							</li>
 						) : null
 					}
 					{
 						links.imdb ? (
 							<li>
-								<a href={links.imdb}>IMDb</a>
+								<a target="_blank"  href={links.imdb}>IMDb</a>
 							</li>
 						) : null
 					}
 					{
 						links.linkedin ? (
 							<li>
-								<a href={links.linkedin}>LinkedIn</a>
+								<a target="_blank"  href={links.linkedin}>LinkedIn</a>
 							</li>
 						) : null
 					}
 					{
 						links.linktree ? (
 							<li>
-								<a href={links.linktree}>LinkTree</a>
+								<a target="_blank"  href={links.linktree}>LinkTree</a>
 							</li>
 						) : null
 					}
 					{
 						links.portfolio ? (
 							<li>
-								<a href={links.portfolio}>Portfólio</a>
+								<a target="_blank"  href={links.portfolio}>Portfólio</a>
 							</li>
 						) : null
 					}
 					{
 						links.soundcloud ? (
 							<li>
-								<a href={links.soundcloud}>SoundCloud</a>
+								<a target="_blank"  href={links.soundcloud}>SoundCloud</a>
 							</li>
 						) : null
 					}
 					{
 						links.youtube ? (
 							<li>
-								<a href={links.youtube}>YouTube</a>
+								<a target="_blank"  href={links.youtube}>YouTube</a>
 							</li>
 						) : null
 					}
