--- a/src/components/widgets/Products.astro
+++ b/src/components/widgets/Products.astro
@@ -18,7 +18,12 @@ const { ...props } = Astro.props as Props;
 	</header>
 
 	<section class="my-8 grid grid-cols-1 md:grid-cols-2 gap-16 md:gap-24 content-around">
-		<ProductCard client:load iconSrc="./models/products/product_model-games_placeholder.gltf" iconColor={0x005ce6}>
+		<ProductCard
+			client:load
+			iconSrc="./models/products/product_model-games_placeholder.gltf"
+			iconColor={0x005ce6}
+			tooltip
+		>
 			<span slot="title">GameDev</span>
 			<span slot="subtitle">e outsourcing</span>
 			<span slot="description">
