--- a/src/components/atoms/TeamCard.astro
+++ b/src/components/atoms/TeamCard.astro
@@ -1,26 +1,17 @@
 ---
 import { Image } from '@astrojs/image/components';
 import { Icon } from 'astro-icon';
+import { memberLinks, MemberLinks } from '../core/MemberLinks';
 
-export interface PropsA {
+export interface Props {
 	photoSrc: string;
 	name: string;
 	roles: string[];
 	skills: string[];
-	links: {
-		artstation?: string;
-		github?: string;
-		instagram?: string;
-		imdb?: string;
-		linkedin?: string;
-		linktree?: string;
-		portfolio?: string;
-		soundcloud?: string;
-		youtube?: string;
-	};
+	links: MemberLinks;
 }
 
-const { photoSrc, name, roles, skills, links } = Astro.props as PropsA;
+const { photoSrc, name, roles, skills, links } = Astro.props as Props;
 ---
 
 <div
@@ -58,87 +49,17 @@ const { photoSrc, name, roles, skills, links } = Astro.props as PropsA;
 				>
 					<Icon name="akar-icons:plus" class="w-6 h-6" />
 				</label>
-				<ul tabindex="0" class="dropdown-content menu p-2 shadow-md bg-base-100 rounded-box w-52">
+				<ul tabindex="0" class="dropdown-content menu p-2 shadow-md bg-base-100 rounded-box w-52 bg-sw-primary">
 					{
-						links.artstation ? (
-							<li>
-								<a target="_blank" href={links.artstation}>
-									Artstation
-								</a>
-							</li>
-						) : null
-					}
-					{
-						links.github ? (
-							<li>
-								<a target="_blank" href={links.github}>
-									GitHub
-								</a>
-							</li>
-						) : null
-					}
-					{
-						links.instagram ? (
-							<li>
-								<a target="_blank" href={links.instagram}>
-									Instagram
-								</a>
-							</li>
-						) : null
-					}
-					{
-						links.imdb ? (
-							<li>
-								<a target="_blank" href={links.imdb}>
-									IMDb
-								</a>
-							</li>
-						) : null
-					}
-					{
-						links.linkedin ? (
-							<li>
-								<a target="_blank" href={links.linkedin}>
-									LinkedIn
-								</a>
-							</li>
-						) : null
-					}
-					{
-						links.linktree ? (
-							<li>
-								<a target="_blank" href={links.linktree}>
-									LinkTree
-								</a>
-							</li>
-						) : null
-					}
-					{
-						links.portfolio ? (
-							<li>
-								<a target="_blank" href={links.portfolio}>
-									Portfólio
-								</a>
-							</li>
-						) : null
-					}
-					{
-						links.soundcloud ? (
-							<li>
-								<a target="_blank" href={links.soundcloud}>
-									SoundCloud
-								</a>
-							</li>
-						) : null
-					}
-					{
-						links.youtube ? (
-							<li>
-								<a target="_blank" href={links.youtube}>
-									YouTube
-								</a>
-							</li>
-						) : null
+						Object.entries(links).map(([key, value]) => {
+							return (
+								<li>
+									<a target="_blank" href={value}>
+										{memberLinks[key].name}
+									</a>
+								</li>
+							);
+						})
 					}
 				</ul>
 			</div>
