--- a/src/components/widgets/Team.astro
+++ b/src/components/widgets/Team.astro
@@ -32,9 +32,9 @@ const { ...props } = Astro.props as Props;
 			roles={['Generalista de Áudio']}
 			skills={['Composição', 'Produção Musical', 'Efeitos Sonoros']}
 			links={{
-				imdb: 'https://www.imdb.com/name/nm11223910/?ref_=fn_al_nm_1',
+				imdb: 'https://www.imdb.com/name/nm11223910/',
 				linkedin: 'https://www.linkedin.com/in/alexandre-barbosa-083b83b4/',
-				youtube: 'https://www.youtube.com/channel/UCYSb-3wJyK-L0E9YyHeqkiQ',
+				youtube: 'https://www.youtube.com/channel/UCYSb-3wJyK-L0E9YyHeqkiQ/',
 			}}
 		>
 			<Image slot="photo" src={alex} alt="Profile Picture" />
@@ -82,7 +82,7 @@ const { ...props } = Astro.props as Props;
 			roles={['Programador Full Stack']}
 			skills={['Backend', 'Frontend', 'Tech Artist']}
 			links={{
-				github: 'https://github.com/wbmagalhaes',
+				github: 'https://github.com/wbmagalhaes/',
 				instagram: 'https://www.instagram.com/wbmagalhaes/',
 				linkedin: 'https://www.linkedin.com/in/william-bernardes-magalhaes/',
 			}}
