--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import DividerRect from '@atoms/dividers/DividerRect.astro';
 ---
 
 <Layout>
-	<section class="max-w-6xl mx-auto px-6 md:px-8">
+	<section class="max-w-6xl mx-auto px-6 md:px-8 mt-10">
 		<Products class="relative z-20" />
 	</section>
 
