--- a/src/components/widgets/Team.astro
+++ b/src/components/widgets/Team.astro
@@ -30,7 +30,7 @@ const { ...props } = Astro.props as Props;
 			client:load
 			name="Alexandre Barbosa"
 			roles={['Generalista de Áudio']}
-			skills={['Composição', 'Produção Musical', 'Efeitos Sonoros']}
+			skills={['Composição', 'Prod. Musical', 'SFX']}
 			links={{
 				imdb: 'https://www.imdb.com/name/nm11223910/',
 				linkedin: 'https://www.linkedin.com/in/alexandre-barbosa-083b83b4/',
