--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -40,7 +40,7 @@ const lorem = new LoremIpsum(
 		<a class="link link-hover">Cookie policy</a>
 	</div>
 </footer> -->
-<footer class="footer px-10 py-4 border-t bg-sw-coal-800 text-sw-coal-300 border-sw-coal-200">
+<footer class="footer px-10 py-4 border-t bg-sw-coal-800 text-sw-secondary-300 border-sw-coal-200">
 	<div class="items-center grid-flow-col">
 		<svg
 			width="24"
