--- a/src/components/widgets/Team.astro
+++ b/src/components/widgets/Team.astro
@@ -1,5 +1,6 @@
 ---
-import { Image } from '@astrojs/image/components';
+// import { Image } from '@astrojs/image/components';
+import { Img } from "astro-imagetools/components";
 import TeamCard from '@atoms/TeamCard';
 
 import alex from '@images/team/alex_profile.png';
@@ -37,7 +38,7 @@ const { ...props } = Astro.props as Props;
 				youtube: 'https://www.youtube.com/channel/UCYSb-3wJyK-L0E9YyHeqkiQ/',
 			}}
 		>
-			<Image slot="photo" src={alex} alt="Profile Picture" />
+			<Img slot="photo" src={alex} alt="Profile Picture" placeholder="blurred"/>
 		</TeamCard>
 
 		<TeamCard
@@ -49,7 +50,7 @@ const { ...props } = Astro.props as Props;
 				linkedin: 'https://www.linkedin.com/in/danilo-nobre/',
 			}}
 		>
-			<Image slot="photo" src={danilo} alt="Profile Picture" />
+			<Img slot="photo" src={danilo} alt="Profile Picture" />
 		</TeamCard>
 
 		<TeamCard
@@ -62,7 +63,7 @@ const { ...props } = Astro.props as Props;
 				portfolio: 'https://gustavarantes.myportfolio.com/',
 			}}
 		>
-			<Image slot="photo" src={gustavo} alt="Profile Picture" />
+			<Img slot="photo" src={gustavo} alt="Profile Picture" placeholder="blurred"/>
 		</TeamCard>
 
 		<TeamCard
@@ -74,7 +75,7 @@ const { ...props } = Astro.props as Props;
 				linkedin: 'https://www.linkedin.com/in/rhayane-miranda/',
 			}}
 		>
-			<Image slot="photo" src={rhayane} alt="Profile Picture" />
+			<Img slot="photo" src={rhayane} alt="Profile Picture" placeholder="blurred"/>
 		</TeamCard>
 		<TeamCard
 			client:load
@@ -86,7 +87,7 @@ const { ...props } = Astro.props as Props;
 				linkedin: 'https://www.linkedin.com/in/william-bernardes-magalhaes/',
 			}}
 		>
-			<Image slot="photo" src={william} alt="Profile Picture" />
+			<Img slot="photo" src={william} alt="Profile Picture" placeholder="blurred"/>
 		</TeamCard>
 	</section>
 </div>
