favicon href fix

--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -30,7 +30,7 @@ const image = 'meta_main.png'
 
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml">
+<link rel="icon" href="/favicon.svg" sizes="any" type="image/svg+xml">
 
 <!-- TODO PEGAR O HERO DAS PÁGINAS -->
 <AstroSeo
