--- a/src/components/core/MetaTags.astro
+++ b/src/components/core/MetaTags.astro
@@ -6,7 +6,7 @@ import { getImage } from '@astrojs/image';
 
 import defaultImageSrc from 'public/sw_main.png';
 
-import { SITE } from '~/config.mjs';
+import { SITE } from '@/config.mjs';
 import Fonts from '@atoms/Fonts.astro';
 
 // TODO: PEGAR O HERO DAS PÁGINAS
