hero minor fix, implementação inicial projeto

--- a/src/components/widgets/Hero.astro
+++ b/src/components/widgets/Hero.astro
@@ -11,8 +11,8 @@ import HeroCanvas from '@atoms/HeroCanvas';
 
 <section class="relative">
 	<DividerWave class="spacewiz__fill--reversed bottom-0"/>
-	<Image class="block md:hidden" fit="cover" aspectRatio="16:9" format="webp" src={heroImageSM} alt="" />
-	<Image class="hidden md:block" fit="cover" aspectRatio="16:9" format="webp" src={heroImageMD} alt="" />
+	<Image class="block md:hidden w-screen" fit="cover" aspectRatio="16:9" format="webp" src={heroImageSM} alt="" />
+	<Image class="hidden md:block w-screen" fit="cover" aspectRatio="16:9" format="webp" src={heroImageMD} alt="" />
 	<!-- <figure class="absolute top-0 right-0 w-full h-full"> -->
 		<!-- <HeroCanvas client:load/> -->
 	<!-- </figure> -->
