--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -1,4 +1,5 @@
 ---
+import HeroProject from '@/components/widgets/HeroProject.astro';
 import Layout from '@layouts/BaseLayout.astro';
 
 type Props = {
@@ -9,10 +10,14 @@ const { title } = Astro.props as Props;
 ---
 
 <Layout>
-	<section>
-		<h1>{title}</h1>
-		<article class="my-6">
+	<HeroProject />
+
+	<main>
+		<article class="spacewiz__container px-6">
+			<h1 class="font-black uppercase mb-12">
+				<span>Galeria</span>
+			</h1>
 			<slot />
 		</article>
-	</section>
+	</main>
 </Layout>
