--- a/src/components/widgets/Error404.astro
+++ b/src/components/widgets/Error404.astro
@@ -5,16 +5,11 @@
 				<span class="sr-only">Erro</span>
 				<span class="text-gradient bg-gradient-to-t from-sw-navy-700 to-sw-flamingo">404</span>
 			</h2>
-			<p class="text-3xl font-semibold md:text-3xl">Ops! </p>
+			<p class="text-3xl font-semibold md:text-3xl">Ops!</p>
 			<p class="mt-4 mb-8 text-lg text-sw-coal-400 dark:text-sw-coal-100">
 				Não conseguimos encontrar nada para mostrar aqui.
 			</p>
-			<a
-				rel="noopener noreferrer"
-				href="#"
-				class="btn ml-4"
-				>Início</a
-			>
+			<a rel="noopener noreferrer" href="#" class="btn ml-4">Início</a>
 		</div>
 	</div>
 </section>
