--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,7 +1,7 @@
 ---
-import Layout from '@/layouts/BaseLayout.astro';
+import Layout from '@layouts/BaseLayout.astro';
 import { SITE } from '@/config.mjs';
-import Error404 from '@/components/widgets/Error404.astro';
+import Error404 from '@widgets/Error404.astro';
 const title = `Error 404 — ${SITE.name}`;
 ---
 
