--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -1,5 +1,5 @@
 ---
-import HeroProject from '@/components/widgets/HeroProject.astro';
+import HeroProject from '@widgets/HeroProject.astro';
 import Layout from '@layouts/BaseLayout.astro';
 
 type Props = {
